Fixed a few layout issues.
Mobile pages being too wide after the addition of the "projects" item to the header, the "more projects" box being broken on mobile, and the projects page description being raw markdown on individual tag pages.

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -322,7 +322,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 1199px) {
     .header {
-        font-size: 0.5em;
+        font-size: 0.4em;
     }
 }
 @media (max-width: 899px) {
